--- a/TrovaAuto/TrovaAuto/TrovaAuto/UI/SuccessoPagina.xaml
+++ b/TrovaAuto/TrovaAuto/TrovaAuto/UI/SuccessoPagina.xaml
@@ -58,7 +58,7 @@
                         <StackLayout Grid.Row="0" Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
                             <Label Text="Imposta timer" FontSize="Medium" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" TextColor="White" FontAttributes="Bold"></Label>
                             <Image x:Name="successTimerIcon" HeightRequest="40" WidthRequest="40" IsVisible="False" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand"></Image>
-                            <Frame x:Name="timerFrame" CornerRadius="10" BackgroundColor="#987654" BorderColor="White" HeightRequest="40" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand">
+                            <Frame x:Name="timerFrame" CornerRadius="10" BackgroundColor="#987654" BorderColor="White"  HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand">
                                 <TimePicker x:Name="timer" Grid.Row="0" FontSize="Medium" TextColor="White" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"></TimePicker>
                             </Frame>
                         </StackLayout>
